# DocToMD

./: .gitignore  DocToMD.spec  README.md  pyproject.toml  requirements.txt
.antigravity/: plan.md
docs/: RELEASE_NOTES.md  USER_MANUAL.md
src/: main.py
src/core/: __init__.py  batch.py  config_manager.py  converter.py  gemma_handler.py  post_processor.py
src/core/handlers/: _cleanup.py  base_handler.py  hwp_handler.py  markitdown_handler.py  pages_handler.py  pdf_handler.py  text_handler.py
src/gui/: dropzone.py  main_window.py
src/resources/: icon.icns
tests/: test_converter.py  test_pages_cleanup.py  test_pages_handler.py
tests/samples/: pages_sample_clean.md  pages_sample_raw.md  test.txt
