[project]
name = "doctomd-converter"
version = "1.0.1"
description = "모든 문서를 Markdown으로 변환하는 데스크톱 앱"
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]",
    "pypandoc",
    "customtkinter",
    "tkinterdnd2",
    "pillow",
    "transformers",
    "torch",
    "accelerate",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
